--- a/src/styles.css
+++ b/src/styles.css
@@ -80,6 +80,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
   white-space: nowrap;
+  opacity: 0;
 }
 
 .nav-sidebar ul li a:hover {
