--- a/src/styles.css
+++ b/src/styles.css
@@ -91,10 +91,36 @@ body {
 }
 
 /*! Homepage hero */
+h1 {
+  font-size: 96px;
+}
 
 .hero {
   background: #f9f7fe;
   text-align: center;
-  padding: 75px 10px 10px 10px;
+  padding: 150px 10px 10px 60px;
+}
 
+.hero p {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+  color: #1b1b1b;
+}
+
+.hero h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 2;
+  }
+
+.btn-branding {
+  background: #6c63ff;
+  border-radius: 4px;
+  color: white;
+  line-height: 27px;
+  padding: 12px;
+  font-size: 18px;
 }
