--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
+:root {
+  --branding-color: #6c63ff;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+
+}
+
 body {
   background-color: #f1f1f1;
 }
@@ -17,7 +24,7 @@ body {
 .btn-toggle-nav {
   width: 50px;
   height: 100%;
-  background-color: blueviolet ;
+  background-color: var(--branding-color) ;
   background-image: url("/images/toggle.PNG");
   background-repeat: no-repeat;
   background-size: 40%;
@@ -117,7 +124,7 @@ h1 {
   }
 
 .btn-branding {
-  background: #6c63ff;
+  background: var(--branding-color);
   border-radius: 4px;
   color: white;
   line-height: 27px;
