--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
   --branding-color: #6c63ff;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  --default-font-color: #1b1b1b;
 }
 
 body {
@@ -120,7 +121,7 @@ h1 {
   font-size: 36px;
   font-weight: bold;
   margin: 0;
-  color: #1b1b1b;
+  color: var(--default-font-color);
 }
 
 .hero h2 {
