--- a/src/styles.css
+++ b/src/styles.css
@@ -140,7 +140,7 @@ h1 {
   font-size: 18px;
 }
 
-/*! Yogurt */
+/*! Container */
 .container {
   text-align: center;
   padding: 50px 10px 10px 60px;
