--- a/src/styles.css
+++ b/src/styles.css
@@ -14,8 +14,6 @@ p {
 }
 
 
-
-
 /*! Top & Side Toggle NavBar  */
 .nav-main{
   width: 100%;
@@ -31,8 +29,6 @@ p {
 .btn-toggle-nav {
   width: 50px;
   height: 100%;
-  background-color: var(--branding-color) ;
-  background-image: url("/images/toggle.PNG");
   background-repeat: no-repeat;
   background-size: 40%;
   background-position: center;
@@ -41,26 +37,9 @@ p {
 .btn-toggle-nav:hover {
   opacity: 0.5;
 }
-.nav-main ul {
-  display: flex;
-  flex-wrap: wrap;
-  padding-left: 15px;
-}
 
-.nav-main ul li {
-  list-style: none;
-  line-height: 60px;
-}
-
-.nav-main ul li a {
-  display: block;
-  height: 100%;
-  padding: 0 10px;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #111;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
+.container-fluid {
+  padding: 0px 10px 10px 10px;;
 }
 
 .nav-sidebar {
